--- a/python_networkx_en.ipynb
+++ b/python_networkx_en.ipynb
@@ -68,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list(g.nodes())"
@@ -78,6 +80,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "tags": [
      "hide"
     ]
@@ -90,12 +93,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = nx.spring_layout(g)\n",
     "\n",
-    "nx.draw_networkx(g, pos, node_color='#ffaaff', node_size=800)"
+    "nx.draw_networkx(g, pos, node_color='#ffaaff', node_size=800)\n",
+    "\n",
+    "#plt.savefig(\"ex1.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -120,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list(g.nodes())"
@@ -130,6 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "tags": [
      "hide"
     ]
@@ -142,13 +153,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = nx.spring_layout(g)\n",
     "\n",
     "nx.draw_networkx_nodes(g, pos, node_size=20)\n",
-    "nx.draw_networkx_edges(g, pos, alpha=0.4)"
+    "nx.draw_networkx_edges(g, pos, alpha=0.4)\n",
+    "\n",
+    "#plt.savefig(\"ex2.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -172,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list(g.nodes())"
@@ -182,6 +200,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "tags": [
      "hide"
     ]
@@ -194,14 +213,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = nx.spring_layout(g)\n",
     "\n",
     "nx.draw_networkx_nodes(g, pos, node_size=20)\n",
     "nx.draw_networkx_edges(g, pos, alpha=0.4)\n",
-    "nx.draw_networkx_labels(g, pos, alpha=0.4);"
+    "nx.draw_networkx_labels(g, pos, alpha=0.4)\n",
+    "\n",
+    "#plt.savefig(\"random_graph1.png\")\n",
+    "plt.show()"
    ]
   }
  ],
