--- a/python_numpy_en.ipynb
+++ b/python_numpy_en.ipynb
@@ -200,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.linspace(0., 2., 5)"
@@ -216,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xx, yy = np.meshgrid([1, 2, 3], [4, 5, 6])\n",
@@ -1436,6 +1440,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compute the histogram of a set of data (with a specific binning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1, 1, 3, 2, 2, 2])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All but the last (righthand-most) bin is half-open.  In other words,\n",
+    "if `bins` is:\n",
+    "\n",
+    "  [1, 2, 3, 4]\n",
+    "\n",
+    "then the first bin is ``[1, 2)`` (including 1, but excluding 2) and\n",
+    "the second ``[2, 3)``.  The last bin, however, is ``[3, 4]``, which\n",
+    "*includes* 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = np.array([1, 2, 3, 4])\n",
+    "bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist, bins_ = np.histogram(a, bins=bins)\n",
+    "hist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Linear algebra"
    ]
   },
@@ -1653,9 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = np.array([[np.nan, 2, 3], [1, np.nan, 6]])\n",
@@ -1665,9 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a.min()"
@@ -1676,9 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.nanmin(a)"
@@ -1688,7 +1737,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1700,7 +1748,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1711,9 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a.mean()"
@@ -1722,9 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.nanmean(a)"
@@ -1733,9 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a.shape"
@@ -1751,9 +1792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ma = np.ma.masked_where(np.isnan(a), a)\n",
@@ -1763,9 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ma.min()"
@@ -1774,9 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ma.max()"
@@ -1785,9 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ma.mean()"
