Make a snippet more clear.

--- a/python_scipy_optimize_en.ipynb
+++ b/python_scipy_optimize_en.ipynb
@@ -69,6 +69,7 @@
    "source": [
     "def f1(x, *params):\n",
     "    z = x**2\n",
+    "    print(\">\", x, z) # debug\n",
     "    return z"
    ]
   },
@@ -116,8 +117,8 @@
     "    \n",
     "    $x = (x_1, x_2, ...)$\n",
     "    $f(x) = \\sum_i x_i^2 = x^T * x$'''\n",
-    "    \n",
     "    z = np.dot(x, x)\n",
+    "    print(\">\", x, z) # debug\n",
     "    return z"
    ]
   },
@@ -150,15 +151,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from scipy import optimize\n",
     "\n",
-    "search_ranges = (slice(-3., 3., 0.1),)\n",
+    "search_ranges = (slice(-3., 3., 0.5),)\n",
     "\n",
     "res = optimize.brute(f1,\n",
     "                     search_ranges,\n",
     "                     #args=params,\n",
     "                     full_output=True,\n",
-    "                     finish=optimize.fmin)\n",
+    "                     finish=None)     # optimize.fmin)\n",
     "\n",
     "print(\"x* =\", res[0])\n",
     "print(\"f(x*) =\", res[1])"
@@ -217,16 +220,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "search_ranges = (slice(-3., 3., 0.1), slice(-3., 3., 0.1))\n",
+    "%%time\n",
+    "\n",
+    "search_ranges = (slice(-2., 3., 1.), slice(-2., 3., 1.))\n",
     "\n",
     "res = optimize.brute(f2,\n",
     "                     search_ranges,\n",
     "                     #args=params,\n",
     "                     full_output=True,\n",
-    "                     finish=optimize.fmin)\n",
+    "                     finish=None)     # optimize.fmin)\n",
     "\n",
     "print(\"x* =\", res[0])\n",
     "print(\"f(x*) =\", res[1])"
@@ -236,6 +243,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "tags": [
      "hide"
     ]
