--- a/ai_saes_fr.ipynb
+++ b/ai_saes_fr.ipynb
@@ -216,6 +216,150 @@
     "\n",
     "    return parent_pop[0].x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \"Standalone\" version (pyai/standalone_implementations/saes/saes.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This is a simple Python implementation of the (mu/mu_I, lambda)-sigmaSA-ES\n",
+    "as discussed in\n",
+    "http://www.scholarpedia.org/article/Evolution_Strategies\n",
+    "Based on\n",
+    "https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct\n",
+    "\"\"\"\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "MU = 3                    # number of parents\n",
+    "LAMBDA = 12               # number of offspring\n",
+    "\n",
+    "X_INIT = np.ones(1)       # initial parent vector\n",
+    "#X_INIT = np.ones(2)       # initial parent vector\n",
+    "SIGMA_INIT = 1            # initial global mutation strength sigma\n",
+    "\n",
+    "SIGMA_MIN = 1e-10         # ES stops when sigma is smaller than sigma_min\n",
+    "\n",
+    "###########################################################\n",
+    "\n",
+    "# Function to be optimized (sphere test function as an example)\n",
+    "# individual: the individual to evaluate\n",
+    "def sphere_function(indiv):\n",
+    "    x = indiv.x\n",
+    "    assert x.shape == X_INIT.shape, x\n",
+    "    y = np.dot(x, x)\n",
+    "    return y\n",
+    "\n",
+    "def sin1(indiv):\n",
+    "    x = indiv.x\n",
+    "    assert x.shape == (1,), x\n",
+    "    x = np.absolute(x)\n",
+    "    y = np.sin(2 * 2 * np.pi * x) * np.exp(-5 * x)\n",
+    "    return y\n",
+    "\n",
+    "def sin2(indiv):\n",
+    "    x = indiv.x\n",
+    "    assert x.shape == (1,), x\n",
+    "    y = np.sin(2 * 2 * np.pi * x) * 1/np.sqrt(2*np.pi) * np.exp(-(x**2)/2)\n",
+    "    return y\n",
+    "\n",
+    "from matplotlib.finance import quotes_historical_yahoo\n",
+    "import datetime\n",
+    "\n",
+    "date1 = datetime.date( 1995, 1, 1 )\n",
+    "date2 = datetime.date( 2004, 4, 12 )\n",
+    "quotes = quotes_historical_yahoo('INTC', date1, date2)\n",
+    "yahoo_data = [-q[1] for q in quotes]\n",
+    "\n",
+    "def yahoo(indiv):\n",
+    "    x = indiv.x\n",
+    "    assert x.shape == (1,), x\n",
+    "\n",
+    "    y = 0\n",
+    "    if 0 <= x < len(yahoo_data):\n",
+    "        y = yahoo_data[int(x)]\n",
+    "    return y\n",
+    "\n",
+    "#fitness = sphere_function\n",
+    "fitness = sin1\n",
+    "#fitness = sin2\n",
+    "#fitness = yahoo\n",
+    "\n",
+    "###########################################################\n",
+    "\n",
+    "# The individual class\n",
+    "# x: the individual's value\n",
+    "# sigma: the individual's sigma\n",
+    "class Individual():\n",
+    "    def __init__(self, x, sigma):\n",
+    "        self.x = x\n",
+    "        self.sigma = sigma\n",
+    "        self.cost = fitness(self)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"{0} {1} {2}\".format(self.x, self.sigma, self.cost)\n",
+    "\n",
+    "###########################################################\n",
+    "\n",
+    "# This sorts the population according to the individuals' fitnesses\n",
+    "# pop: a list of Individual objects\n",
+    "def select_individuals(pop):\n",
+    "    pop.sort(key=lambda indiv: indiv.cost, reverse=False)\n",
+    "    return pop[:MU]\n",
+    "\n",
+    "# This performs intermediate (multi-) recombination\n",
+    "# parents: a list of Individual objects\n",
+    "def recombine_individuals(parents):\n",
+    "    parents_y = np.array([indiv.x for indiv in parents])\n",
+    "    parents_sigma = np.array([indiv.sigma for indiv in parents])\n",
+    "    recombinant = Individual(parents_y.mean(axis=0), parents_sigma.mean())\n",
+    "    return recombinant\n",
+    "\n",
+    "###########################################################\n",
+    "\n",
+    "def main():\n",
+    "\n",
+    "    # Initialization\n",
+    "    n = X_INIT.shape[0]         # determine search space dimensionality n\n",
+    "    tau = 1. / math.sqrt(2.*n)  # self-adaptation learning rate\n",
+    "\n",
+    "    # Initializing individual population\n",
+    "    parent_pop = [Individual(X_INIT, SIGMA_INIT) for i in range(MU)]\n",
+    "\n",
+    "    # Evolution loop of the (mu/mu_I, lambda)-sigma-SA-ES\n",
+    "    while parent_pop[0].sigma > SIGMA_MIN:\n",
+    "        offspring_pop = []\n",
+    "        recombinant = recombine_individuals(parent_pop) # TODO: BUG ? this statement may be in the next line\n",
+    "        for i in range(1, LAMBDA):\n",
+    "            offspring_sigma = recombinant.sigma * math.exp(tau * random.normalvariate(0,1))\n",
+    "            offspring_y = recombinant.x + offspring_sigma * np.random.normal(size=n)\n",
+    "            offspring = Individual(offspring_y, offspring_sigma)\n",
+    "            offspring_pop.append(offspring)\n",
+    "        parent_pop = select_individuals(offspring_pop)\n",
+    "        print(parent_pop[0])\n",
+    "\n",
+    "# Remark: Final approximation of the optimizer is in \"parent_pop[0].x\"\n",
+    "#         corresponding fitness is in \"parent_pop[0].cost\" and the final\n",
+    "#         mutation strength is in \"parent_pop[0].sigma\"\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
