--- a/python_scipy_optimize_brute_force_en.ipynb
+++ b/python_scipy_optimize_brute_force_en.ipynb
@@ -10,7 +10,7 @@
     ]
    },
    "source": [
-    "# Optimization with Scipy"
+    "# \"Brute force\" optimization with Scipy"
    ]
   },
   {
@@ -148,12 +148,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy import optimize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "from scipy import optimize\n",
     "\n",
     "search_ranges = (slice(-3., 3., 0.5),)\n",
     "\n",
@@ -252,6 +261,7 @@
    "source": [
     "print(res[2].shape)\n",
     "print(\"tested x:\", res[2])\n",
+    "print()\n",
     "print(res[3].shape)\n",
     "print(\"tested f(x):\", res[3])"
    ]
