--- a/ai_optimization_saes_en.ipynb
+++ b/ai_optimization_saes_en.ipynb
@@ -30,16 +30,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algorithm"
+    "## The SAES algorithm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "Self-adaptive Evolution Strategy (SAES) with revaluations. ${\\cal{N}}$ denotes some independent standard Gaussian random variable, with dimension as required in equations above.\n",
+    "In the following algorithm ${\\cal{N}}$ denotes some independent standard Gaussian random variable, with dimension as required in equations above.\n",
     "\n",
     "---\n",
     "\n",
@@ -92,15 +90,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Python inplementation (draft)"
+    "For more information, see http://www.scholarpedia.org/article/Evolution_strategies."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* http://www.scholarpedia.org/article/Evolution_strategies\n",
-    "* https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct"
+    "## A Python inplementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following implementation has been taken from there: https://github.com/jeremiedecock/pyai/blob/a61a866ead261e470785cc02c9d5aa6deeac80ee/pyai/optimization/standalone_implementations/saes/saes.py."
    ]
   },
   {
@@ -109,127 +113,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Individual class\n",
+    "#!/usr/bin/env python\n",
     "\n",
-    "- x: the individual's value\n",
-    "- sigma: the individual's sigma\n",
-    "\"\"\"\n",
-    "class Individual():\n",
-    "    def __init__(self, x, sigma, y):\n",
-    "        self.x = x\n",
-    "        self.sigma = sigma\n",
-    "        self.y = y           # cost or reward\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return \"{0} {1} {2}\".format(self.x, self.sigma, self.y)\n",
-    "    \n",
-    "\n",
-    "mu = 3                # number of parents\n",
-    "lambda_ = 12          # number of offspring\n",
-    "x_init = None         # initial parent vector\n",
-    "sigma_init = 1        # initial global mutation strength sigma\n",
-    "sigma_min = 1e-5      # ES stops when sigma is smaller than sigma_min\n",
-    "num_evals_func = None # How many times noisy objective functions should be called for each evaluation (considere the average value of these calls)\n",
-    "\n",
-    "log.data[\"x\"] = []\n",
-    "log.data[\"sigma\"] = []\n",
-    "log.data[\"y\"] = []\n",
-    "\n",
-    "\n",
-    "def select_individuals(pop):\n",
-    "    \"\"\"Sort the population according to the individuals' fitnesses.\n",
-    "    \n",
-    "    - pop: a list of Individual objects\n",
-    "    \"\"\"\n",
-    "    pop.sort(key=lambda indiv: indiv.y, reverse=False)\n",
-    "    return pop[:mu]\n",
-    "\n",
-    "\n",
-    "def recombine_individuals(parents):\n",
-    "    \"\"\"Perform intermediate (multi-)recombination.\n",
-    "    \n",
-    "    - parents: a list of Individual objects\n",
-    "    \"\"\"\n",
-    "    parents_y = np.array([indiv.x for indiv in parents])\n",
-    "    parents_sigma = np.array([indiv.sigma for indiv in parents])\n",
-    "    recombinant = Individual(parents_y.mean(axis=0), parents_sigma.mean(), 0) # TODO\n",
-    "    return recombinant\n",
-    "\n",
-    "\n",
-    "def optimize(objective_function, num_gen=50):\n",
-    "\n",
-    "    #if x_init is None:\n",
-    "    #    x_init = np.random.random(objective_function.ndim)\n",
-    "    #    x_init -= (objective_function.domain_min + objective_function.domain_max) / 2.  # TODO\n",
-    "    #    x_init *= (objective_function.domain_max - objective_function.domain_min)       # TODO\n",
-    "    #else:\n",
-    "    assert x_init.ndim == 1\n",
-    "    assert x_init.shape[0] == objective_function.ndim\n",
-    "\n",
-    "    # Initialization\n",
-    "    n = x_init.shape[0]         # determine search space dimensionality n\n",
-    "    tau = 1. / math.sqrt(2.*n)       # self-adaptation learning rate\n",
-    "\n",
-    "    # Initializing individual population\n",
-    "    y = objective_function(x_init)\n",
-    "    parent_pop = [Individual(x_init, sigma_init, y) for i in range(mu)]\n",
-    "\n",
-    "    gen_index = 0\n",
-    "\n",
-    "    # Evolution loop of the (mu/mu_I, lambda)-sigma-SA-ES\n",
-    "    while parent_pop[0].sigma > sigma_min and gen_index < num_gen:\n",
-    "        offspring_pop = []\n",
-    "        recombinant = recombine_individuals(parent_pop) # TODO: BUG ? this statement may be in the next line\n",
-    "        for offspring_index in range(1, lambda_):\n",
-    "            offspring_sigma = recombinant.sigma * math.exp(tau * random.normalvariate(0,1))\n",
-    "            offspring_x = recombinant.x + offspring_sigma * np.random.normal(size=n)\n",
-    "\n",
-    "            if num_evals_func is None:\n",
-    "                # If the objective function is deterministic\n",
-    "                offspring_y = objective_function(offspring_x)\n",
-    "            else:\n",
-    "                # If the objective function is stochastic\n",
-    "                # TODO: move this in function or in optimizer (?) class so that it is available for all optimiser implementations...\n",
-    "                num_evals = num_evals_func(gen_index)\n",
-    "                offspring_y_list = np.zeros(num_evals)\n",
-    "                for eval_index in range(num_evals):\n",
-    "                    offspring_y_list[eval_index] = float(objective_function(offspring_x))\n",
-    "                offspring_y = np.mean(offspring_y_list)\n",
-    "                # TODO: generate the confidence bounds of offspring_y and plot it\n",
-    "\n",
-    "            offspring = Individual(offspring_x, offspring_sigma, offspring_y)\n",
-    "            offspring_pop.append(offspring)\n",
-    "        parent_pop = select_individuals(offspring_pop)\n",
-    "        #parent_pop = select_individuals(parent_pop + offspring_pop)\n",
-    "\n",
-    "        gen_index += 1\n",
-    "\n",
-    "        log.data[\"x\"].append(parent_pop[0].x)  # TODO use a \"log\" object instead\n",
-    "        log.data[\"y\"].append(parent_pop[0].y)  # TODO\n",
-    "        print(parent_pop[0])\n",
-    "\n",
-    "    plotSamples(np.array(log.data[\"x\"]), np.array(log.data[\"y\"]), objective_function=objective_function)\n",
-    "    plotCosts(np.array(log.data[\"y\"]))\n",
-    "\n",
-    "    return parent_pop[0].x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## \"Standalone\" version (pyai/standalone_implementations/saes/saes.py)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"\n",
     "This is a simple Python implementation of the (mu/mu_I, lambda)-sigmaSA-ES\n",
-    "as discussed in\n",
+    "as discussed in \n",
     "http://www.scholarpedia.org/article/Evolution_Strategies\n",
     "Based on\n",
     "https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct\n",
@@ -237,15 +125,12 @@
     "\n",
     "import math\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "\n",
     "\n",
     "MU = 3                    # number of parents\n",
     "LAMBDA = 12               # number of offspring\n",
     "\n",
-    "X_INIT = np.ones(1)       # initial parent vector\n",
-    "#X_INIT = np.ones(2)       # initial parent vector\n",
+    "X_INIT = np.ones(2)       # initial parent vector\n",
     "SIGMA_INIT = 1            # initial global mutation strength sigma\n",
     "\n",
     "SIGMA_MIN = 1e-10         # ES stops when sigma is smaller than sigma_min\n",
@@ -254,46 +139,9 @@
     "\n",
     "# Function to be optimized (sphere test function as an example)\n",
     "# individual: the individual to evaluate\n",
-    "def sphere_function(indiv):\n",
-    "    x = indiv.x\n",
-    "    assert x.shape == X_INIT.shape, x\n",
-    "    y = np.dot(x, x)\n",
-    "    return y\n",
     "\n",
-    "def sin1(indiv):\n",
-    "    x = indiv.x\n",
-    "    assert x.shape == (1,), x\n",
-    "    x = np.absolute(x)\n",
-    "    y = np.sin(2 * 2 * np.pi * x) * np.exp(-5 * x)\n",
-    "    return y\n",
-    "\n",
-    "def sin2(indiv):\n",
-    "    x = indiv.x\n",
-    "    assert x.shape == (1,), x\n",
-    "    y = np.sin(2 * 2 * np.pi * x) * 1/np.sqrt(2*np.pi) * np.exp(-(x**2)/2)\n",
-    "    return y\n",
-    "\n",
-    "from matplotlib.finance import quotes_historical_yahoo\n",
-    "import datetime\n",
-    "\n",
-    "date1 = datetime.date( 1995, 1, 1 )\n",
-    "date2 = datetime.date( 2004, 4, 12 )\n",
-    "quotes = quotes_historical_yahoo('INTC', date1, date2)\n",
-    "yahoo_data = [-q[1] for q in quotes]\n",
-    "\n",
-    "def yahoo(indiv):\n",
-    "    x = indiv.x\n",
-    "    assert x.shape == (1,), x\n",
-    "\n",
-    "    y = 0\n",
-    "    if 0 <= x < len(yahoo_data):\n",
-    "        y = yahoo_data[int(x)]\n",
-    "    return y\n",
-    "\n",
-    "#fitness = sphere_function\n",
-    "fitness = sin1\n",
-    "#fitness = sin2\n",
-    "#fitness = yahoo\n",
+    "def fitness(individual):\n",
+    "    return sum(individual.x**2)\n",
     "\n",
     "###########################################################\n",
     "\n",
@@ -327,33 +175,166 @@
     "\n",
     "###########################################################\n",
     "\n",
-    "def main():\n",
+    "# Initialization\n",
+    "n = X_INIT.shape[0]         # determine search space dimensionality n   \n",
+    "tau = 1. / math.sqrt(2.*n)  # self-adaptation learning rate\n",
     "\n",
-    "    # Initialization\n",
-    "    n = X_INIT.shape[0]         # determine search space dimensionality n\n",
-    "    tau = 1. / math.sqrt(2.*n)  # self-adaptation learning rate\n",
+    "# Initializing individual population\n",
+    "parent_pop = [Individual(X_INIT, SIGMA_INIT) for i in range(MU)]\n",
     "\n",
-    "    # Initializing individual population\n",
-    "    parent_pop = [Individual(X_INIT, SIGMA_INIT) for i in range(MU)]\n",
-    "\n",
-    "    # Evolution loop of the (mu/mu_I, lambda)-sigma-SA-ES\n",
-    "    while parent_pop[0].sigma > SIGMA_MIN:\n",
-    "        offspring_pop = []\n",
-    "        recombinant = recombine_individuals(parent_pop) # TODO: BUG ? this statement may be in the next line\n",
-    "        for i in range(1, LAMBDA):\n",
-    "            offspring_sigma = recombinant.sigma * math.exp(tau * random.normalvariate(0,1))\n",
-    "            offspring_y = recombinant.x + offspring_sigma * np.random.normal(size=n)\n",
-    "            offspring = Individual(offspring_y, offspring_sigma)\n",
-    "            offspring_pop.append(offspring)\n",
-    "        parent_pop = select_individuals(offspring_pop)\n",
-    "        print(parent_pop[0])\n",
+    "# Evolution loop of the (mu/mu_I, lambda)-sigma-SA-ES\n",
+    "while parent_pop[0].sigma > SIGMA_MIN:\n",
+    "    offspring_pop = []\n",
+    "    recombinant = recombine_individuals(parent_pop) # TODO: BUG ? this statement may be in the next line\n",
+    "    for i in range(1, LAMBDA):\n",
+    "        offspring_sigma = recombinant.sigma * math.exp(tau * random.normalvariate(0,1))\n",
+    "        offspring_y = recombinant.x + offspring_sigma * np.random.normal(size=n)\n",
+    "        offspring = Individual(offspring_y, offspring_sigma)\n",
+    "        offspring_pop.append(offspring)\n",
+    "    parent_pop = select_individuals(offspring_pop)\n",
+    "    print(parent_pop[0])\n",
     "\n",
     "# Remark: Final approximation of the optimizer is in \"parent_pop[0].x\"\n",
-    "#         corresponding fitness is in \"parent_pop[0].cost\" and the final\n",
-    "#         mutation strength is in \"parent_pop[0].sigma\"\n",
+    "#         corresponding fitness is in \"parent_pop[0].cost\" and the final \n",
+    "#         mutation strength is in \"parent_pop[0].sigma\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other inplementations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PyAI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import required modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Init matplotlib\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (8, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Setup PyAI\n",
+    "import sys\n",
+    "sys.path.insert(0, '/Users/jdecock/git/pub/jdhp/pyai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "from pyai.optimize import SAES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot functions\n",
+    "from pyai.optimize.utils import plot_contour_2d_solution_space\n",
+    "from pyai.optimize.utils import plot_2d_solution_space\n",
+    "\n",
+    "from pyai.optimize.utils import plot_fx_wt_iteration_number\n",
+    "from pyai.optimize.utils import plot_err_wt_iteration_number\n",
+    "from pyai.optimize.utils import plot_err_wt_execution_time\n",
+    "from pyai.optimize.utils import plot_err_wt_num_feval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define the objective function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "## Objective function: Rosenbrock function (Scipy's implementation)\n",
+    "#func = scipy.optimize.rosen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the objective function\n",
+    "#from pyai.optimize.functions import sphere as func\n",
+    "from pyai.optimize.functions import sphere2d as func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saes = SAES()\n",
+    "res = saes.minimize(func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Octave/Matlab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An external Octave (Matlab) implementation is available there: https://homepages.fhv.at/hgb/downloads/mu_mu_I_lambda-ES.oct."
    ]
   }
  ],
