Add docs on 'np.append()'.

--- a/python_numpy_en.ipynb
+++ b/python_numpy_en.ipynb
@@ -953,7 +953,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Concatenate vectors"
+    "### Append 1D arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([])\n",
+    "a = np.append(a, 3)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Performance test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's probably not a good idea to use `np.append` to often as it makes a copy of the array each time it is called..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "a = np.array([])\n",
+    "for i in range(10000):\n",
+    "    a = np.append(a, i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists use a different data structure that makes them more efficient for repeated additions..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "l = []\n",
+    "for i in range(10000):\n",
+    "    l.append(i)\n",
+    "\n",
+    "a = np.array(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, the better option is probably the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "a = np.array([i for i in range(10000)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concatenate 1D arrays"
    ]
   },
   {
@@ -990,7 +1075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Concatenate matrices"
+    "### Concatenate 2D arrays"
    ]
   },
   {
